Navbar flicker corrected. Background corrected for mobile

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@ body {
   background: url("./assets/images/background.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
 }
 .view {
   padding-top: 25vh;
